--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
+    "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-elements": "^3.4.3",
-    "react-native-maps": "^1.7.1",
-    "typescript": "^4.9.4"
+    "react-native-fs": "^2.20.0",
+    "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.14.4",
+    "typescript": "^4.9.4",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
