--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
@@ -27,8 +28,8 @@
     "react-native-fs": "^2.20.0",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
-    "typescript": "^4.9.4",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
