--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
