--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "lottie-react-native": "5.1.4",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
