--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@types/react": "^18.0.27",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "^14.1.1",
+    "expo-location": "~15.1.1",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.71.7",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
-    "typescript": "^4.9.4",
-    "expo-location": "~15.1.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
