--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
+    "socket.io-client": "^4.6.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
